Closed Bug 355632 Opened 19 years ago Closed 15 years ago

unable to make tbird on the Mac my default news:// reader

Categories

(Thunderbird :: OS Integration, defect)

x86
macOS
defect
Not set
normal

Tracking

(thunderbird3.1 beta1-fixed)

RESOLVED FIXED
Thunderbird 3.1b1
Tracking Status
thunderbird3.1 --- beta1-fixed

People

(Reporter: moco, Assigned: Usul)

Details

Attachments

(1 file)

unable to make tbird on the Mac my default news:// reader note: the corresponding pref UI (for making it the default mail/news/rss reader) differs between Mac and Windows tbird, too. on mac, all I can do is make tbird my default mail reader.
note, I'm using version 2 beta 1 (20061005) on mac os x
This appears to still be true on the trunk.
Curiously enough, I can't make it *not* my default news reader: Prefs - General, check on startup is checked, I click the Check Now button, and along with yet another checkbox for check on startup that shouldn't be there, I have default email and default news checked and disabled, and only RSS unchecked and enabled.
I guess it's worth noting that whether or not you successfully set it as default, it's not going to actually work. Toolkit's Mac commandline handling is broken: if the app isn't running, it calls commandline handlers, but if it is running it just passes the commandline to browser.chromeURL. In our case that's the chrome URL for the compose window, so that at least mailto works, but things like RSS subscription don't, and can't until we either rewrite toolkit's commandline handling, or give the hidden window a dispatcher that either duplicates or runs commandline handlers while we're open.
Assignee: mscott → nobody
Version: 2.0 → Trunk
Flags: blocking-thunderbird3.1?
not going to block on a news + mac bug
Flags: blocking-thunderbird3.1? → blocking-thunderbird3.1-
Component: Preferences → OS Integration
QA Contact: preferences → os-integration
How should one write a test for that ?
Attachment #426674 - Flags: review?(bugzilla)
that certainly looks like a possible fix. Does it work? I don't know how one would write a test for that.
(In reply to comment #8) > that certainly looks like a possible fix. Does it work? > Untested - I'll build over the week-end and see if that does the trick.
Status: NEW → ASSIGNED
(In reply to comment #9) > (In reply to comment #8) > > that certainly looks like a possible fix. Does it work? > > > > Untested - I'll build over the week-end and see if that does the trick. Actaully just launched try builds.
(In reply to comment #8) > that certainly looks like a possible fix. Does it work? Yes it works.
Assignee: nobody → ludovic
Comment on attachment 426674 [details] [diff] [review] [checked in] Could this be the fix ? Yep, this fixes it so that it doesn't depend on the RSS option. I don't see an easy automated test for this, especially as it would require changing system defaults and interactions with other apps. Therefore waiving the test requirement. Checked in: http://hg.mozilla.org/comm-central/rev/705fcc83a092
Attachment #426674 - Attachment description: Could this be the fix ? → [checked in] Could this be the fix ?
Attachment #426674 - Flags: review?(bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: