Bug 355632 unable to make tbird on the Mac my default news:// reader (previously incorrectly depended on rss selection). r=Standard8